# Kurisu

./: .gitignore  README.md  package-lock.json  package.json  vite.config.js
.github/workflows/: discord-notify.yml  release.yml  windows-build.yml
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: anilist.rs  commands.rs  db.rs  lib.rs  library.rs  main.rs  models.rs  playback.rs  recognize.rs  rss.rs  updater.rs
src/lib/: EditEntry.svelte  EpisodeStepper.svelte  Icon.svelte  Img.svelte  LinkAnime.svelte  Login.svelte  ScoreInput.svelte  Select.svelte  TitleBar.svelte  Tracking.svelte  Updater.svelte  api.ts  auth.svelte.ts  library.svelte.ts  now.svelte.ts  types.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/anime/[id]/: +page.svelte
src/routes/calendar/: +page.svelte
src/routes/notifications/: +page.svelte
src/routes/search/: +page.svelte
src/routes/seasons/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/stats/: +page.svelte
src/routes/torrents/: +page.svelte
