[package]
name = "kurisu"
version = "0.1.0"
description = "A Taiga-style anime tracker for Linux"
authors = ["CateDesu"]
edition = "2021"

[lib]
name = "kurisu_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# AniList GraphQL over HTTP
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# async runtime for HTTP + the OAuth callback listener
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "fs", "sync", "time"] }
# local library + cache
rusqlite = { version = "0.32", features = ["bundled"] }
# MPRIS2 playback detection (MPV/VLC/Celluloid/etc.) — milestone 2
mpris = "2.0"
# XDG app-data dirs
directories = "5"
# timestamps
chrono = { version = "0.4", features = ["serde"] }
# error handling
anyhow = "1"
thiserror = "2"
# filename / now-playing title parsing — milestone 2/3
regex = "1"
log = "0.4"
