[package]
name = "kurisu"
version = "1.0.0"
description = "A Taiga-style anime tracker for Linux"
authors = ["CateDesu"]
edition = "2021"

[lib]
name = "kurisu_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# AniList GraphQL over HTTP
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# async runtime for HTTP + the OAuth callback listener
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "fs", "sync", "time"] }
# local library + cache
rusqlite = { version = "0.32", features = ["bundled"] }
# XDG app-data dirs
directories = "5"
# timestamps
chrono = { version = "0.4", features = ["serde"] }
# error handling
anyhow = "1"
# filename / now-playing title parsing — milestone 2/3
regex = "1"
log = "0.4"
env_logger = "0.11"
# non-poisoning mutexes (a panic while holding one must not wedge every command)
parking_lot = "0.12"
# OAuth state randomness (already in the tree via rustls)
ring = "0.17"
# update download integrity (SHA-256 sidecar verification)
sha2 = "0.10"

# MPRIS2 playback detection (MPV/VLC/Celluloid/…) — Linux only. Windows uses
# GSMTC via the `windows` crate below; other platforms get a no-op stub.
[target.'cfg(target_os = "linux")'.dependencies]
mpris = "2.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Foundation",
    "Foundation_Collections",
    "Media_Control",
] }
